--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container-nav container">
       <div class="home-nav">
         <a href="./index.html">
-          <h1>Patrick Brasil</h1>
+          <b>Resumo</b>
         </a>
       </div>
       <div>
@@ -43,7 +43,7 @@
       <div class="resumo">
         <h2 class="ola">Olá!</h2>
         <h2>Tenho 25 anos<br>e moro no Rio de Janeiro.</h2>
-        <p>Got some nice skills in Photoshop, Illustrator and WordPress. Had the chance to work for Google, Themes Dojo and Stickers.Pub</p>
+        <p>Tenho algumas boas habilidades em HTML, CSS e JavaScript. Tive a oportunidade de trabalhar como designer gráfico durante um periodo de 2 anos.</p>
         <a href="#">Baixar Currículo</a>
       </div>
     </div>
