--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container-nav container">
       <div class="home-nav">
         <a href="./index.html">
-          <b>Resumo</b>
+          <p>Inicio</p>
         </a>
       </div>
       <div>
@@ -42,15 +42,21 @@
       </div>
       <div class="resumo">
         <h2 class="ola">Olá!</h2>
-        <h2>Tenho 25 anos<br>e moro no Rio de Janeiro.</h2>
+        <div class="container1">
+          <h1><span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
+        </div>
         <p>Tenho algumas boas habilidades em HTML, CSS e JavaScript. Tive a oportunidade de trabalhar como designer gráfico durante um periodo de 2 anos.</p>
-        <a href="#">Baixar Currículo</a>
+        <a href="#contato">
+          <i class="detalhe fa-thin fa-address-card"></i>
+          entre em contato
+        </a>
       </div>
     </div>
   </header>
 
 
   <script type="module" src="./js/script.js"></script>
+  <script src="https://kit.fontawesome.com/a841b5779a.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
