--- a/index.html
+++ b/index.html
@@ -53,6 +53,146 @@
       </div>
     </div>
   </header>
+<section id="habilidade" class="habilidades-bg">
+  <div class="container-habilidades">
+    <h2>Habilidades</h2>
+    <p>Certo. Vamos jogar alguma luz sobre minhas habilidades.</p>
+  </div>
+    <div class="skill-set container">
+           
+      <div class="content content--mlarge skill-set__flex">
+        <ul class="skill-set__list">
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-solid fa-file-excel"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">Excel</h4>
+                </div>
+                <p class="small-title small-title--skill skill-set__high">80<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar1 p90 js-scroll in"></div>
+            </div>
+          </li>
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-brands fa-html5"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">HTML</h4>
+                </div>
+                <p class="small-title small-title--skill">100<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar2 p80 js-scroll in"></div>
+            </div>
+          </li>
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-brands fa-css3-alt"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">CSS</h4>
+                </div>
+                <p class="small-title small-title--skill">100<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar3 p80 js-scroll in"></div>
+            </div>
+          </li>
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-brands fa-js-square"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">Javascript</h4>
+                </div>
+                <p class="small-title small-title--skill">60<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar4 p70 js-scroll in"></div>
+            </div>
+          </li>
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-brands fa-react"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">React</h4>
+                </div>
+                <p class="small-title small-title--skill">40<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar5 p50 js-scroll in"></div>
+            </div>
+          </li>
+        </ul>
+        <ul class="skill-set__list">
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-brands fa-github"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">Git</h4>
+                </div>
+                <p class="small-title small-title--skill skill-set__high">70<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar6 p90 js-scroll in"></div>
+            </div>
+          </li>
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-brands fa-node-js"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">NodeJS</h4>
+                </div>
+                <p class="small-title small-title--skill">60<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar7 p80 js-scroll in"></div>
+            </div>
+          </li>
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-brands fa-wordpress"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">Wordpress</h4>
+                </div>
+                <p class="small-title small-title--skill">70<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar8 p70 js-scroll in"></div>
+            </div>
+          </li>
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-solid fa-globe"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">Inglês</h4>
+                </div>
+                <p class="small-title small-title--skill">70<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar9 p70 js-scroll in"></div>
+            </div>
+          </li>
+          <li class="skill-set__item">
+            <div class="skill-set__icon"><i class="fa fa-solid fa-compass-drafting"></i></div>
+            <div class="skill-set__detail">
+              <div class="skill-set__meta">
+                <div class="skill-set__name">
+                  <h4 class="small-title small-title--skill">UI/UX Design</h4>
+                </div>
+                <p class="small-title small-title--skill">50<span class="skill-set__ratio">%</span></p>
+              </div>
+              <div class="skill-set__bar10 p60 js-scroll in"></div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section id="projetos">
+
+  </section>
+
 
 
   <script type="module" src="./js/script.js"></script>
