--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
   </nav>
-  <header class="main-header">
+  <header class="main-header" id="sobre">
     <div class="container-intro">
       <div class="foto-pessoal">
         <img src="./img/pk.jpg" alt="Patrick">
