ajustes intro e skill

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
           <p>Inicio</p>
         </a>
       </div>
+      
       <div>
-        <ul class="flex gap20 menu-nav">
+        <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
+        <ul class="flex gap20 menu-nav" data-menu="list" id="menu">
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#habilidade">Habilidades</a></li>
           <li><a href="#projetos">Projetos</a></li>
