--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p>Inicio</p>
         </a>
       </div>
-      
+
       <div>
         <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
         <ul class="flex gap20 menu-nav" data-menu="list" id="menu">
@@ -55,13 +55,13 @@
       </div>
     </div>
   </header>
-<section id="habilidade" class="habilidades-bg">
-  <div class="container-habilidades">
-    <h2>Habilidades</h2>
-    <p>Certo. Vamos jogar alguma luz sobre minhas habilidades.</p>
-  </div>
+  <section id="habilidade" class="habilidades-bg">
+    <div class="container-habilidades">
+      <h2>Habilidades</h2>
+      <p>Certo. Vamos jogar alguma luz sobre minhas habilidades.</p>
+    </div>
     <div class="skill-set container">
-           
+
       <div class="content content--mlarge skill-set__flex">
         <ul class="skill-set__list">
           <li class="skill-set__item">
@@ -191,7 +191,20 @@
     </div>
   </section>
 
-  <section id="projetos">
+  <section id="projetos" class="projetos-bg">
+    <div class="container-habilidades branco">
+      <h2>Projetos</h2>
+      <p class="branco">Confira meus últimos projetos.</p>
+    </div>
+    <div class="slide-wrapper">
+      <ul class="slide">
+        <li><img src="./img/projetos/flexblog.jpg" alt=""></li>
+        <li><img src="./img/projetos/animais-fantasticos.jpg" alt=""></li>
+        <li><img src="./img/projetos/amt-solutions.jpg" alt=""></li>
+        <li><img src="./img/projetos/wildbeast.jpg" alt=""></li>
+        <li><img src="./img/projetos/bikcraft.jpg" alt=""></li>
+      </ul>
+    </div>
 
   </section>
 
