--- a/index.html
+++ b/index.html
@@ -196,14 +196,25 @@
       <h2>Projetos</h2>
       <p class="branco">Confira meus últimos projetos.</p>
     </div>
+    <ul class="custom-controls">
+      <li>C</li>
+      <li>W</li>
+      <li>A</li>
+      <li>B</li>
+      <li>F</li>
+    </ul>
     <div class="slide-wrapper">
       <ul class="slide">
-        <li><img src="./img/projetos/flexblog.jpg" alt=""></li>
-        <li><img src="./img/projetos/animais-fantasticos.jpg" alt=""></li>
-        <li><img src="./img/projetos/amt-solutions.jpg" alt=""></li>
-        <li><img src="./img/projetos/wildbeast.jpg" alt=""></li>
-        <li><img src="./img/projetos/bikcraft.jpg" alt=""></li>
+        <li><img src="./img/projetos/bikcraft.jpg" alt=""> BikCraft <a href="https://patrick-xt.github.io/bikcraft/">Acesse</a></li>
+        <li><img src="./img/projetos/wildbeast.jpg" alt="">Wildbeast <a href="https://patrick-xt.github.io/Wildbeast/">Acesse</a></li>
+        <li><img src="./img/projetos/amt-solutions.jpg" alt="">AMT<a href="https://agitated-kare-f63f3a.netlify.app/">Acesse</a></li>
+        <li><img src="./img/projetos/flexblog.jpg" alt="">FlexBlog<a href="https://patrick-xt.github.io/Flexblog/">Acesse</a></li>
+        <li><img src="./img/projetos/animais-fantasticos.jpg" alt="">Animais Fantasticos <a href="https://patrick-xt.github.io/Animais-Fantasticos/">Acesse</a></li>
       </ul>
+    </div>
+    <div class="arrow-nav">
+      <button class="prev"></button>
+      <button class="next"></button>
     </div>
 
   </section>
