--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#habilidade">Habilidades</a></li>
           <li><a href="#projetos">Projetos</a></li>
-          <li><a href="#experiencia">Experiencia</a></li>
+          <li><a href="#experiencia">Experiência</a></li>
           <li><a href="#informacoes">Informações</a></li>
           <li><a href="#farmacao">Formação</a></li>
           <li><a href="#contato">Contato</a></li>
@@ -205,18 +205,46 @@
     </ul>
     <div class="slide-wrapper">
       <ul class="slide">
-        <li><img src="./img/projetos/bikcraft.jpg" alt=""> BikCraft <a href="https://patrick-xt.github.io/bikcraft/">Acesse</a></li>
-        <li><img src="./img/projetos/wildbeast.jpg" alt="">Wildbeast <a href="https://patrick-xt.github.io/Wildbeast/">Acesse</a></li>
-        <li><img src="./img/projetos/amt-solutions.jpg" alt="">AMT<a href="https://agitated-kare-f63f3a.netlify.app/">Acesse</a></li>
-        <li><img src="./img/projetos/flexblog.jpg" alt="">FlexBlog<a href="https://patrick-xt.github.io/Flexblog/">Acesse</a></li>
-        <li><img src="./img/projetos/animais-fantasticos.jpg" alt="">Animais Fantasticos <a href="https://patrick-xt.github.io/Animais-Fantasticos/">Acesse</a></li>
+        <li class="projeto-item">
+          <div class="projeto-img">
+            <img src="./img/projetos/bikcraft.jpg" alt="">
+          </div>
+          <h2>Bikcraft</h2>
+          <p>Projeto criado durante o curso de HTML e CSS da origamid. Dê uma olhada no projeto em <a href="https://patrick-xt.github.io/bikcraft/" target="_blank" rel="noopener"> https://patrick-xt.github.io/bikcraft/</a></p>
+        </li>
+        <li class="projeto-item">
+          <div class="projeto-img"><img src="./img/projetos/wildbeast.jpg" alt=""></div>
+          <h2>Wildbeast</h2>
+          <p>Projeto criado durante o curso de CSS Grid Layout da origamid. Dê uma olhada no projeto em <a href="https://patrick-xt.github.io/Wildbeast/" target="_blank" rel="noopener"> https://patrick-xt.github.io/Wildbeast/</a></p>
+        </li>
+        <li class="projeto-item">
+          <div class="projeto-img"><img src="./img/projetos/amt-solutions.jpg" alt=""></div>
+          <h2>AMT</h2>
+          <p>Projeto de uma empresa de serviços em telecomunicações. Dê uma olhada no projeto em <a href="https://agitated-kare-f63f3a.netlify.app/" target="_blank" rel="noopener"> https://agitated-kare-f63f3a.netlify.app/</a></p>
+        </li>
+        <li class="projeto-item">
+         <div class="projeto-img">
+           <img src="./img/projetos/flexblog.jpg" alt="">
+          </div>
+          <h2>Flexblog</h2>
+          <p>Projeto criado durante o curso de CSS Flexbox da origamid. Dê uma olhada no projeto em <a href="https://patrick-xt.github.io/Flexblog/" target="_blank" rel="noopener"> https://patrick-xt.github.io/Flexblog/</a></p>
+        </li>
+        <li class="projeto-item">
+          <div class="projeto-img">
+          <img src="./img/projetos/animais-fantasticos.jpg" alt="">
+        </div>
+        <h2>Animais Fantásticos</h2>
+        <p>Projeto criado durante o curso de JavaScript da origamid. Dê uma olhada no projeto em <a href="https://patrick-xt.github.io/Animais-Fantasticos/" target="_blank" rel="noopener"> https://patrick-xt.github.io/Animais-Fantasticos/</a></p>
+        </li>
       </ul>
     </div>
     <div class="arrow-nav">
       <button class="prev"></button>
       <button class="next"></button>
     </div>
-
+  </section>
+  <section id="experiencia">
+    
   </section>
 
 
