--- a/index.html
+++ b/index.html
@@ -330,12 +330,162 @@
     </div>
   </section>
 
-  <section class="informacoes-bg">
+  <section class="informacoes-bg" id="informacoes">
     <div class="texto-informa">
       <h1>Informações</h1>
       <p>Descubra mais fatos diversos sobre mim.</p>
     </div>
-    <div></div>
+    <div class="informacoes-content">
+      <div class="flip-card-container" style="--hue: 220">
+        <div class="flip-card">
+  
+          <div class="card-front">
+            <figure>
+              <div class="img-bg"></div>
+              <img class="img-config" src="./img/Informacoes/hobbi.jpg" alt="Brohm Lake">
+              <figcaption>Hobbies</figcaption>
+            </figure>
+  
+            <ul class="ul-config">
+              <li>Ler</li>
+              <li>Esporter no geral</li>
+              <li>Filmes</li>
+              <li>Games</li>
+            </ul>
+          </div>
+  
+          <div class="card-back">
+            <figure>
+              <div class="img-bg"></div>
+              <img class="img-config" src="./img/Informacoes/hobbie1.jpg" alt="Brohm Lake">
+            </figure>
+  
+            <div>
+              <button class="info-add"> Leitura: Minhas leituras preferidas são, ficção cientifica e quadrinhos.</button>
+  
+              <button class="info-add"> Esportes: O esporte que eu mais acompanho é o futebol, e tenho um carinho especial pelo volêi.</button>
+  
+              <button class="info-add">Filmes: Meus filmes preferidos são os que fazem pensar e teorizar.</button>
+  
+              <button class="info-add">
+                Games: Eu gosto dos mais diversos jogos, mas o gênero que eu mais gosto é o RPG.
+              </button>
+            </div>
+  
+            <div class="design-container">
+              <span class="design design--1"></span>
+              <span class="design design--2"></span>
+              <span class="design design--3"></span>
+              <span class="design design--4"></span>
+              <span class="design design--5"></span>
+              <span class="design design--6"></span>
+              <span class="design design--7"></span>
+              <span class="design design--8"></span>
+            </div>
+          </div>
+  
+        </div>
+      </div>
+      <!-- /flip-card-container -->
+  
+      <!-- flip-card-container -->
+      <div class="flip-card-container" style="--hue: 170">
+        <div class="flip-card">
+  
+          <div class="card-front">
+            <figure>
+              <div class="img-bg"></div>
+              <img class="img-config" src="./img/Informacoes/language2.jpg" alt="Image 2">
+              <figcaption>Idiomas</figcaption>
+            </figure>
+  
+            <ul class="ul-config">
+              <li>Português (Nativo)</li>
+              <li>Inglês Avançado</li>
+              <li>Espanhol Intermediário</li>
+            </ul>
+          </div>
+  
+          <div class="card-back">
+            <figure>
+              <div class="img-bg"></div>
+              <img class="img-config" src="./img/Informacoes/language3.jpg" alt="image-2">
+            </figure>
+            <div>
+              <button class="info-add">Inglês: Atualmente eu domino o inglês 100% na parte de leitura e estou em buscando fluência.</button>
+  
+              <button class="info-add">
+                Espanhol: É um idioma que eu particularmente gosto bastante, um dos motivos para eu gostar é principalmente a semelhança com o português.
+              </button>
+            </div>
+            <div class="design-container">
+              <span class="design design--1"></span>
+              <span class="design design--2"></span>
+              <span class="design design--3"></span>
+              <span class="design design--4"></span>
+              <span class="design design--5"></span>
+              <span class="design design--6"></span>
+              <span class="design design--7"></span>
+              <span class="design design--8"></span>
+            </div>
+          </div>
+  
+        </div>
+      </div>
+      <!-- /flip-card-container -->
+  
+      <!-- flip-card-container -->
+      <div class="flip-card-container" style="--hue: 350">
+        <div class="flip-card">
+  
+          <div class="card-front">
+            <figure>
+              <div class="img-bg"></div>
+              <img class="img-config" src="./img/Informacoes/caract.jpg" alt="Brohm Lake">
+              <figcaption>Características</figcaption>
+            </figure>
+  
+            <ul class="ul-config">
+              <li>Pontual</li>
+              <li>Detalhista</li>
+              <li>Proativo</li>
+              <li>Boa comunicação</li>
+            </ul>
+          </div>
+  
+          <div class="card-back">
+            <!-- only if the image is necessary -->
+            <figure>
+              <div class="img-bg"></div>
+              <img class="img-config" src="./img/Informacoes/caract1.jpg" alt="Brohm Lake">
+            </figure>
+            <div>
+              <button class="info-add"> Pontualidade: Minha principal característica é a pontualidade, não gosto de atrasar nada e nem ninguém.</button>
+  
+              <button class="info-add"> Detalhista: Busco sempre melhorar e aperfeiçoar os detalhes de um projeto para a perfeita e intuitiva usabilidade.</button>
+  
+              <button class="info-add">Proatividade: Procuro sempre antecipar demandas e desejos de clientes para contemplá-los sempre com o melhor produto possível.</button>
+  
+              <button class="info-add">
+                Boa comunicação: Sempre busco o feedback de companheiros, buscando o meu melhor desempenho e o até mesmo o do próprio companheiro.
+              </button>
+            </div>
+            <!-- can add svg here and remove these eight spans -->
+            <div class="design-container">
+              <span class="design design--1"></span>
+              <span class="design design--2"></span>
+              <span class="design design--3"></span>
+              <span class="design design--4"></span>
+              <span class="design design--5"></span>
+              <span class="design design--6"></span>
+              <span class="design design--7"></span>
+              <span class="design design--8"></span>
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </div>
   </section>
   <script type="module" src="./js/script.js"></script>
   <script src="https://kit.fontawesome.com/a841b5779a.js" crossorigin="anonymous"></script>
