--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
           <li><a href="#habilidade">Habilidades</a></li>
           <li><a href="#projetos">Projetos</a></li>
           <li><a href="#experiencia">Experiência</a></li>
-          <li><a href="#informacoes">Informações</a></li>
-          <li><a href="#farmacao">Formação</a></li>
+          <li><a href="#formacao">Formação</a></li>
           <li><a href="#contato">Contato</a></li>
         </ul>
       </div>
@@ -330,163 +329,78 @@
     </div>
   </section>
 
-  <section class="informacoes-bg" id="informacoes">
-    <div class="texto-informa">
-      <h1>Informações</h1>
-      <p>Descubra mais fatos diversos sobre mim.</p>
+
+  <section class="formacao" id="formacao" aria-label="Formação">
+
+    <div class="formacao-container">
+      <h2 class="subtitulo">Formação</h2>
+      <div>
+        <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong> graduação</strong> 🎓 que terminei no final de 2020 em <strong>Engenharia Civil</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+            <span class="faculdade-tipo">Bacharel</span>
+            <h3 class="faculdade-curso">Engenharia Civil</h3>
+            <span class="faculdade-instituicao">UNISUAM</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Curso</span>
+            <h3 class="faculdade-curso">HTML e CSS</h3>
+            <span class="faculdade-instituicao">ORIGAMID</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">CURSO</span>
+            <h3 class="faculdade-curso">JavaScript Completo ES6+</h3>
+            <span class="faculdade-instituicao">ORIGAMID</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">CURSO</span>
+            <h3 class="faculdade-curso">Administrando Banco de Dados</h3>
+            <span class="faculdade-instituicao">FUNDAÇÃO BRADESCO</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">CURSO</span>
+            <h3 class="faculdade-curso">React Completo</h3>
+            <span class="faculdade-instituicao">ORIGAMID</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">CURSO</span>
+            <h3 class="faculdade-curso">Fundamentos de Lógica de Programação</h3>
+            <span class="faculdade-instituicao">FUNDAÇÃO BRADESCO</span>
+          </li>
+
+        </ul>
+
+
+        <div class="formacao-extra">
+          <div class="curso">
+            <h3>CARGA HORÁRIA DOS CURSOS</h3>
+            <ul>
+              <li>HTML e CSS <span>23h</span> </li>
+              <li>JavaScript Completo ES6+ <span>37h</span></li>
+              <li>Administrando Banco de Dados <span>15h</span></li>
+              <li>React Completo <span>18h</span> </li>
+              <li>Fundamentos de Lógica de Programação <span>15h</span> </li>
+
+
+
+
+            </ul>
+          </div>
+
+
+        </div>
+      </div>
+
     </div>
-    <div class="informacoes-content">
-      <div class="flip-card-container" style="--hue: 220">
-        <div class="flip-card">
-  
-          <div class="card-front">
-            <figure>
-              <div class="img-bg"></div>
-              <img class="img-config" src="./img/Informacoes/hobbi.jpg" alt="Brohm Lake">
-              <figcaption>Hobbies</figcaption>
-            </figure>
-  
-            <ul class="ul-config">
-              <li>Ler</li>
-              <li>Esporter no geral</li>
-              <li>Filmes</li>
-              <li>Games</li>
-            </ul>
-          </div>
-  
-          <div class="card-back">
-            <figure>
-              <div class="img-bg"></div>
-              <img class="img-config" src="./img/Informacoes/hobbie1.jpg" alt="Brohm Lake">
-            </figure>
-  
-            <div>
-              <button class="info-add"> Leitura: Minhas leituras preferidas são, ficção cientifica e quadrinhos.</button>
-  
-              <button class="info-add"> Esportes: O esporte que eu mais acompanho é o futebol, e tenho um carinho especial pelo volêi.</button>
-  
-              <button class="info-add">Filmes: Meus filmes preferidos são os que fazem pensar e teorizar.</button>
-  
-              <button class="info-add">
-                Games: Eu gosto dos mais diversos jogos, mas o gênero que eu mais gosto é o RPG.
-              </button>
-            </div>
-  
-            <div class="design-container">
-              <span class="design design--1"></span>
-              <span class="design design--2"></span>
-              <span class="design design--3"></span>
-              <span class="design design--4"></span>
-              <span class="design design--5"></span>
-              <span class="design design--6"></span>
-              <span class="design design--7"></span>
-              <span class="design design--8"></span>
-            </div>
-          </div>
-  
-        </div>
-      </div>
-      <!-- /flip-card-container -->
-  
-      <!-- flip-card-container -->
-      <div class="flip-card-container" style="--hue: 170">
-        <div class="flip-card">
-  
-          <div class="card-front">
-            <figure>
-              <div class="img-bg"></div>
-              <img class="img-config" src="./img/Informacoes/language2.jpg" alt="Image 2">
-              <figcaption>Idiomas</figcaption>
-            </figure>
-  
-            <ul class="ul-config">
-              <li>Português (Nativo)</li>
-              <li>Inglês Avançado</li>
-              <li>Espanhol Intermediário</li>
-            </ul>
-          </div>
-  
-          <div class="card-back">
-            <figure>
-              <div class="img-bg"></div>
-              <img class="img-config" src="./img/Informacoes/language3.jpg" alt="image-2">
-            </figure>
-            <div>
-              <button class="info-add">Inglês: Atualmente eu domino o inglês 100% na parte de leitura e estou em buscando fluência.</button>
-  
-              <button class="info-add">
-                Espanhol: É um idioma que eu particularmente gosto bastante, um dos motivos para eu gostar é principalmente a semelhança com o português.
-              </button>
-            </div>
-            <div class="design-container">
-              <span class="design design--1"></span>
-              <span class="design design--2"></span>
-              <span class="design design--3"></span>
-              <span class="design design--4"></span>
-              <span class="design design--5"></span>
-              <span class="design design--6"></span>
-              <span class="design design--7"></span>
-              <span class="design design--8"></span>
-            </div>
-          </div>
-  
-        </div>
-      </div>
-      <!-- /flip-card-container -->
-  
-      <!-- flip-card-container -->
-      <div class="flip-card-container" style="--hue: 350">
-        <div class="flip-card">
-  
-          <div class="card-front">
-            <figure>
-              <div class="img-bg"></div>
-              <img class="img-config" src="./img/Informacoes/caract.jpg" alt="Brohm Lake">
-              <figcaption>Características</figcaption>
-            </figure>
-  
-            <ul class="ul-config">
-              <li>Pontual</li>
-              <li>Detalhista</li>
-              <li>Proativo</li>
-              <li>Boa comunicação</li>
-            </ul>
-          </div>
-  
-          <div class="card-back">
-            <!-- only if the image is necessary -->
-            <figure>
-              <div class="img-bg"></div>
-              <img class="img-config" src="./img/Informacoes/caract1.jpg" alt="Brohm Lake">
-            </figure>
-            <div>
-              <button class="info-add"> Pontualidade: Minha principal característica é a pontualidade, não gosto de atrasar nada e nem ninguém.</button>
-  
-              <button class="info-add"> Detalhista: Busco sempre melhorar e aperfeiçoar os detalhes de um projeto para a perfeita e intuitiva usabilidade.</button>
-  
-              <button class="info-add">Proatividade: Procuro sempre antecipar demandas e desejos de clientes para contemplá-los sempre com o melhor produto possível.</button>
-  
-              <button class="info-add">
-                Boa comunicação: Sempre busco o feedback de companheiros, buscando o meu melhor desempenho e o até mesmo o do próprio companheiro.
-              </button>
-            </div>
-            <!-- can add svg here and remove these eight spans -->
-            <div class="design-container">
-              <span class="design design--1"></span>
-              <span class="design design--2"></span>
-              <span class="design design--3"></span>
-              <span class="design design--4"></span>
-              <span class="design design--5"></span>
-              <span class="design design--6"></span>
-              <span class="design design--7"></span>
-              <span class="design design--8"></span>
-            </div>
-          </div>
-  
-        </div>
-      </div>
-    </div>
+
   </section>
+
+  <section>
+    <!-- <div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2186.0781848375896!2d-43.25564861819873!3d-22.85684907905593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997bfe7dfb0db1%3A0x905414090beb8e47!2sRua%20Romero%20Zander%2C%20271%20-%20Ramos%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2021040-080!5e0!3m2!1spt-BR!2sbr!4v1650905675338!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div> -->
+  </section>
+
   <script type="module" src="./js/script.js"></script>
   <script src="https://kit.fontawesome.com/a841b5779a.js" crossorigin="anonymous"></script>
   <script src="./js/module/jquery.js"></script>
