--- a/index.html
+++ b/index.html
@@ -373,20 +373,27 @@
 
         <div class="formacao-extra">
           <div class="curso">
-            <h3>CARGA HORÁRIA DOS CURSOS</h3>
-            <ul>
+            <h3>CARGA HORÁRIA E INFORMAÇÕES DOS CURSOS</h3>
+            <ul class="js-accordion">
               <li>HTML e CSS <span>23h</span> </li>
+              <p>O foco do curso é teoria + prática, assim eu aprendi os fundamentos por trás de cada decisão de código. E após isso eu  implementei em um projeto real — bikcraft.com. Bikcraft foi meu primeiro site profissional construído. Nele eu uso CSS Flexbox e Grid Layout para construir os projetos responsivos e totalmente do zero, sem usar nada pronto.</p>
               <li>JavaScript Completo ES6+ <span>37h</span></li>
+              <p>Neste curso eu consegui aprender tudo que é necessário para dominar o JavaScript. O curso vai do básico ao avançado e ao final dele eu pude obter uma compreensão maior da linguagem, dos seus principais métodos e da sua sintaxe.
+              O foco é no aprendizado da linguagem, mas o principal local de aplicação será na web, através de manipulações do DOM e requisições via Fetch API.</p>
+
               <li>Administrando Banco de Dados <span>15h</span></li>
+              <p>Neste curso, eu tive uma introdução de como administrar um banco de dados e, desta forma, conseguir realizar um bom gerenciamento das atividades inerentes a essa função.
+              Além disso, eu pude conhecer os conceitos que fazem parte do dia a dia de um administrador de banco de dados, os modelos de dados, SQL, esquemas, instâncias, tabelas e todo esse fascinante universo que envolve os bancos de dados!
+              Foi abordada as diferenças entre os diversos profissionais que atuam em atividades ligadas à gerência de banco de dados, bem como quais são os tipos mais utilizados e adequados a empresas de qualquer porte.</p>
               <li>React Completo <span>18h</span> </li>
+              <p>Neste curso eu aprendi a como utilizar o React do zero para o desenvolvimento de aplicações web reativas.
+              Consegui aprender a criar um aplicativo web com funcionalidades parecidas de redes sociais como o Instagram.
+              O foco do curso foi no entendimento completo do React, com isso praticamente tudo foi criado do zero, sem a dependência de pacotes externos.</p>
               <li>Fundamentos de Lógica de Programação <span>15h</span> </li>
-
-
-
-
+              <p>Este curso aborda o conceito de lógica, lógica de programação e o pensamento dedutivo e matemático que embasa a construção de instruções lógicas corretas.
+              Para isso, são apresentados os fundamentos básicos da lógica da programação e as principais técnicas para o desenvolvimento de algoritmos: descrição narrativa, fluxograma e pseudocódigo.</p>
             </ul>
           </div>
-
 
         </div>
       </div>
