--- a/index.html
+++ b/index.html
@@ -376,22 +376,22 @@
             <h3>CARGA HORÁRIA E INFORMAÇÕES DOS CURSOS</h3>
             <ul class="js-accordion">
               <li>HTML e CSS <span>23h</span> </li>
-              <p>O foco do curso é teoria + prática, assim eu aprendi os fundamentos por trás de cada decisão de código. E após isso eu  implementei em um projeto real — bikcraft.com. Bikcraft foi meu primeiro site profissional construído. Nele eu uso CSS Flexbox e Grid Layout para construir os projetos responsivos e totalmente do zero, sem usar nada pronto.</p>
+              <p>O foco do curso é teoria + prática, assim eu aprendi os fundamentos por trás de cada decisão de código. E após isso eu implementei em um projeto real — bikcraft.com. Bikcraft foi meu primeiro site profissional construído. Nele eu uso CSS Flexbox e Grid Layout para construir os projetos responsivos e totalmente do zero, sem usar nada pronto.</p>
               <li>JavaScript Completo ES6+ <span>37h</span></li>
               <p>Neste curso eu consegui aprender tudo que é necessário para dominar o JavaScript. O curso vai do básico ao avançado e ao final dele eu pude obter uma compreensão maior da linguagem, dos seus principais métodos e da sua sintaxe.
-              O foco é no aprendizado da linguagem, mas o principal local de aplicação será na web, através de manipulações do DOM e requisições via Fetch API.</p>
+                O foco é no aprendizado da linguagem, mas o principal local de aplicação será na web, através de manipulações do DOM e requisições via Fetch API.</p>
 
               <li>Administrando Banco de Dados <span>15h</span></li>
               <p>Neste curso, eu tive uma introdução de como administrar um banco de dados e, desta forma, conseguir realizar um bom gerenciamento das atividades inerentes a essa função.
-              Além disso, eu pude conhecer os conceitos que fazem parte do dia a dia de um administrador de banco de dados, os modelos de dados, SQL, esquemas, instâncias, tabelas e todo esse fascinante universo que envolve os bancos de dados!
-              Foi abordada as diferenças entre os diversos profissionais que atuam em atividades ligadas à gerência de banco de dados, bem como quais são os tipos mais utilizados e adequados a empresas de qualquer porte.</p>
+                Além disso, eu pude conhecer os conceitos que fazem parte do dia a dia de um administrador de banco de dados, os modelos de dados, SQL, esquemas, instâncias, tabelas e todo esse fascinante universo que envolve os bancos de dados!
+                Foi abordada as diferenças entre os diversos profissionais que atuam em atividades ligadas à gerência de banco de dados, bem como quais são os tipos mais utilizados e adequados a empresas de qualquer porte.</p>
               <li>React Completo <span>18h</span> </li>
               <p>Neste curso eu aprendi a como utilizar o React do zero para o desenvolvimento de aplicações web reativas.
-              Consegui aprender a criar um aplicativo web com funcionalidades parecidas de redes sociais como o Instagram.
-              O foco do curso foi no entendimento completo do React, com isso praticamente tudo foi criado do zero, sem a dependência de pacotes externos.</p>
+                Consegui aprender a criar um aplicativo web com funcionalidades parecidas de redes sociais como o Instagram.
+                O foco do curso foi no entendimento completo do React, com isso praticamente tudo foi criado do zero, sem a dependência de pacotes externos.</p>
               <li>Fundamentos de Lógica de Programação <span>15h</span> </li>
               <p>Este curso aborda o conceito de lógica, lógica de programação e o pensamento dedutivo e matemático que embasa a construção de instruções lógicas corretas.
-              Para isso, são apresentados os fundamentos básicos da lógica da programação e as principais técnicas para o desenvolvimento de algoritmos: descrição narrativa, fluxograma e pseudocódigo.</p>
+                Para isso, são apresentados os fundamentos básicos da lógica da programação e as principais técnicas para o desenvolvimento de algoritmos: descrição narrativa, fluxograma e pseudocódigo.</p>
             </ul>
           </div>
 
@@ -403,9 +403,60 @@
   </section>
 
   <section>
-    <!-- <div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2186.0781848375896!2d-43.25564861819873!3d-22.85684907905593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997bfe7dfb0db1%3A0x905414090beb8e47!2sRua%20Romero%20Zander%2C%20271%20-%20Ramos%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2021040-080!5e0!3m2!1spt-BR!2sbr!4v1650905675338!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div> -->
+    <div class="titulo-contato">
+      <h1>Entre em contato comigo</h1>
+      <p>É hora de entrar em contato</p>
+    </div>
+    <div class="container-contato" id="contato">
+      <div class="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2186.0781848375896!2d-43.25564861819873!3d-22.85684907905593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997bfe7dfb0db1%3A0x905414090beb8e47!2sRua%20Romero%20Zander%2C%20271%20-%20Ramos%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2021040-080!5e0!3m2!1spt-BR!2sbr!4v1650905675338!5m2!1spt-BR!2sbr" width="400" height="480" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div>
+        <form class="diplay-form" action="" method="post">
+          <div>
+            <label for="name">Nome</label>
+            <input type="text" id="name" name="name" placeholder="Seu nome" required>
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required placeholder="contato@email.com">
+          </div>
+          <div>
+            <label for="phone">Telefone</label>
+            <input type="text" id="phone" name="phone" required placeholder="(21) 9999-9999">
+          </div>
+          <div>
+            <label for="contact-message">Mensagem</label>
+            <textarea placeholder="Envie-me uma mensagem via email." name="message" id="contact-message" rows="5" required></textarea>
+            
+          </div>
+          <button class="botao-contato" type="submit">Enviar Mensagem</button>
+        </form>
+      </div>
+      <div class="inform-contato">
+        <div>
+          <h1>Endereço</h1>
+          <p>Rua Romero Zander, 271, Ramos - RJ</p>
+        </div>
+        <div>
+          <h1>Telefone</h1>
+          <p>(21) 9999-9999</p>
+        </div>
+        <div>
+          <h1>Email</h1>
+          <p>patrickbrasilr@gmail.com</p>
+        </div>
+        <div>
+          <h1>Social</h1>
+          <ul class="lista-midia">
+            <li><a href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-github-square"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </section>
 
   <script type="module" src="./js/script.js"></script>
