--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
 
   </section>
 
-  <section>
+  <section id="contato">
     <div class="titulo-contato">
       <h1>Entre em contato comigo</h1>
-      <p>É hora de entrar em contato</p>
+      <p>É hora de entrar em contato.</p>
     </div>
     <div class="container-contato" id="contato">
       <div class="mapa">
@@ -416,6 +416,9 @@
       </div>
     </div>
   </section>
+
+
+  
 
   <script type="module" src="./js/script.js"></script>
   <script src="https://kit.fontawesome.com/a841b5779a.js" crossorigin="anonymous"></script>
