--- a/index.html
+++ b/index.html
@@ -417,7 +417,9 @@
     </div>
   </section>
 
-
+  <footer class="footer-bg">
+    <p>Patrick Brasil © 2020 - 2022. Alguns direitos reservados.</p>
+  </footer>
   
 
   <script type="module" src="./js/script.js"></script>
